changed the style

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <h2>Math Practice Page</h2>
     </header>
     <form>
-        <p>first number:
+        <p>first:
             <input type="text" id="first"><br/>
         </p>
-        <p>second number:
+        <p>second:
             <input type="text" id="second"><br/>
         </p>
-        <p>third number:
+        <p>third:
             <input type="text" id="third"><br/>
         </p>
-        <p>fourth number:
+        <p>fourth:
             <input type="text" id="fourth"><br/>
         </p>
-        <p>fifth number:
+        <p>fifth:
             <input type="text" id="fifth"><br/>
         </p>
-        <p>sixth number:
+        <p>sixth:
             <input type="text" id="sixth"><br/>
         </p>
 
@@ -38,7 +38,10 @@
         <button name="submit" type="button"  onclick="smallNum()">Smallest number</button>
         <button name="submit" type="button" onclick="rangeNum()">Range</button>
         <button name="submit" type="button" onclick="order()">order</button>
-
+        <button name="submit" type="button" onclick="modeNum()">mode</button>
+        <button name="submit" type="button" onclick="mid()">middle</button>
+        <button name="submit" type="button" onclick="unique()">unique</button>
+        <button name="submit" type="button" onclick="duplicates()">duplicates</button>
     </form>
 </body>
 </html>
